[gd_scene load_steps=2 format=3 uid="uid://dmqhrbaeljdd5"]

[ext_resource type="Script" path="res://Scripts/UI/UpgradeShop.gd" id="1_script"]

[node name="UpgradeShop" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.705882)

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -153.0
offset_top = 50.0
offset_right = 153.0
offset_bottom = 117.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 48
text = "THE DRAFT"
horizontal_alignment = 1

[node name="Subtitle" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 110.0
offset_right = 100.0
offset_bottom = 133.0
grow_horizontal = 2
text = "Choose 1 Upgrade"
horizontal_alignment = 1

[node name="CardContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -150.0
offset_right = 400.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 40
alignment = 1

[node name="Card1" type="Button" parent="CardContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(220, 300)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Upgrade 1"
autowrap_mode = 2

[node name="Card2" type="Button" parent="CardContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(220, 300)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Upgrade 2"
autowrap_mode = 2

[node name="Card3" type="Button" parent="CardContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(220, 300)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Upgrade 3"
autowrap_mode = 2

[node name="MessageLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -100.0
offset_right = 200.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 0
horizontal_alignment = 1
